--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "php": ">=5.3.0"
     },
     "autoload": {
-        "psr-4": {"Avatax\\": ""}
+        "psr-4": {"Avatax\\": "Avatax"}
     },
     "minimum-stability": "dev"
 }
