--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
     "name": "avalara/avatax",
-    "version": "14.4.2",
+    "version": "14.4.3",
     "description": "A set of classes to assist with integration to the Avalara AvaTax SOAP API.",
     "require": {
         "php": ">=5.3.0"
     },
     "autoload": {
-        "psr-4": {"Avatax\\": "Avatax"}
+        "psr-4": {"AvaTax\\": "AvaTax"}
     },
     "minimum-stability": "dev"
 }
